[package]
name = "leto"
version = "0.1.0"
authors = ["Zac Reid"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmarks"

[lib]
name = "leto"
path = "src/lib.rs"

[[bin]]
name = "leto"
path = "src/bin/main.rs"